# clap-freq-shifter

./: .gitmodules  CMakeLists.txt  Makefile
clap-tools/: CMakeLists.txt  README.md
clap-tools/mac/: example-env.sh  make-pkg-installer.sh
clap-tools/wclap/: local-server.py
resources/: index.html
resources/web/: cbor.js  style.css  ui.html
source/: freq-shifter.cpp
